@@ -1,12 +1,16 @@
 package com.icar.platform.config;
 
 import com.icar.platform.infrastructure.security.filter.JwtAuthenticationFilter;
+import com.icar.platform.infrastructure.security.service.CarWashDetailsService;
 import com.icar.platform.infrastructure.security.service.CustomerDetailsService;
 import com.icar.platform.infrastructure.security.utils.TokenGenerator;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -25,32 +29,22 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
-
-    private static final String[] SWAGGER_WHITELIST = {
-            "/v3/api-docs/**",
-            "/swagger-ui.html",
-            "/swagger-ui/**",
-            "/webjars/**",
-            "/swagger-resources/**",
-            "/favicon.ico"
-    };
-
-    private static final String[] AUTH_WHITELIST = {
-            "/api/v1/auth/**",
-            "/api/v1/health",
-            "/error",
-            "/files/**",
-    };
 
     private final TokenGenerator tokenGenerator;
     private final CustomerDetailsService customerDetailsService;
+    private final CarWashDetailsService carWashDetailsService;
 
-    public SecurityConfig(TokenGenerator tokenGenerator,
-                          CustomerDetailsService customerDetailsService) {
-        this.tokenGenerator = tokenGenerator;
-        this.customerDetailsService = customerDetailsService;
-    }
+    private static final String[] SWAGGER_WHITELIST = {
+            "/v3/api-docs/**", "/swagger-ui.html", "/swagger-ui/**", "/webjars/**",
+            "/swagger-resources/**", "/favicon.ico"
+    };
+
+    public static final String[] AUTH_WHITELIST = {
+            "/api/v1/auth/**", "/api/v1/carwash/auth/**", "/api/v1/health", "/error", "/files/**",
+    };
+
 
     @Bean
     public static PasswordEncoder passwordEncoder() {
@@ -58,7 +52,18 @@ public class SecurityConfig {
     }
 
     @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
+    }
+
+    @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(
+                tokenGenerator,
+                customerDetailsService,
+                carWashDetailsService
+        );
+
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
@@ -68,49 +73,28 @@ public class SecurityConfig {
                         .requestMatchers(AUTH_WHITELIST).permitAll()
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
-                .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-                );
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .exceptionHandling(exception -> exception.authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)));
+
         return http.build();
     }
 
-    @Bean
-    public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(tokenGenerator, customerDetailsService);
-    }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "http://192.168.3.6:5173",
-                "http://192.168.3.11:5173",
-                "https://seu-dominio-de-producao.com"
+        configuration.setAllowedOrigins(List.of(
+                "http://192.168.3.8:5173"
         ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
         configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin"
+                "Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"
         ));
-
         configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "Content-Disposition",
-                "Access-Control-Allow-Origin",
+                "Authorization", "Content-Type", "Content-Disposition", "Access-Control-Allow-Origin",
                 "Access-Control-Allow-Credentials"
         ));
-
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
